# BlurFace

./: CMakeLists.txt  README.md  findFace.h  main.cpp
OpenCV/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  opencv_data_config.hpp  opencv_python_config.cmake  version_string.tmp
OpenCV/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenCV/apps/annotation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenCV/apps/interactive-calibration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenCV/apps/version/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenCV/apps/visualisation/: Makefile  (+2 more)
OpenCV/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenCV/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenCV/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenCV/lib/: libopencv_calib3d.4.5.1.dylib  libopencv_dnn.4.5.1.dylib  libopencv_features2d.4.5.1.dylib  libopencv_flann.4.5.1.dylib  libopencv_gapi.4.5.dylib  libopencv_highgui.4.5.1.dylib  libopencv_imgcodecs.4.5.1.dylib  libopencv_ml.4.5.1.dylib  libopencv_ml.4.5.dylib  libopencv_objdetect.4.5.1.dylib  libopencv_objdetect.4.5.dylib  libopencv_photo.4.5.1.dylib  libopencv_photo.4.5.dylib  libopencv_stitching.4.5.1.dylib  libopencv_stitching.4.5.dylib  libopencv_video.4.5.1.dylib  libopencv_videoio.4.5.1.dylib
OpenCV/modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+213 files in other folders)
